Add COPYING and LICENSE 	Singed-off by caps.liu@foxmail.com 	new file:   COPYING 	new file:   LICENSE 	modified:   omx_vdec/Makefile

--- a/omx_vdec/Makefile
+++ b/omx_vdec/Makefile
@@ -2,6 +2,9 @@
 LIBS := libOMX.hisi.video.decoder
 OBJS := omx_allocator.o omx_event_queue.o omx_vdec.o vdec_drv_ctx.o
 
+MMZ_LIB_DIR := ../../hix5hd2-mmz-lib
+
+
 #===============================================================================
 # rules
 #===============================================================================
@@ -14,5 +17,5 @@ clean:
 	rm -rf $(LIBS).so
 
 $(LIBS) : $(OBJS)
-	$(CC) -shared -o $@.so $^
+	$(CC) -shared  -Wl,--no-undefined -L$(MMZ_LIB_DIR) -lhi_mmz  -lpthread -o $@.so $^
 
